# adversarial-constitution

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  roadmap2.md  rodamap1.md  ruff.toml
.github/workflows/: ci.yml  release.yml
adversarial/: attack_engine.py
adversarial/adapters/: http_agent.py  langgraph.py
adversarial/attacks/: base.py  constraint_bypass.py  goal_hijacking.py  indirect_injection.py  prompt_injection.py  threshold_probing.py
adversarial/cli/: progress.py
adversarial/utils/: retry.py
adversarial_constitution.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
constitution/: builder.py  schema.py
constitution/examples/: banking.yaml  healthcare.yaml  legal.yaml
defense/: constitution_hardener.py
reporting/: audit_report.py  pdf_renderer.py  server.py
reporting/templates/: report.md.j2
reports/: banking_audit_example.json  legal_martinelli_audit.html  legal_martinelli_audit.json  legal_martinelli_audit.md  legal_v1.1.yaml
tests/: test_attacks.py  test_threshold_and_report.py
