[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adversarial-constitution"
version = "0.1.0"
description = "Automated red-teaming framework for Agentic Constitutions"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Ant'z Studio", email = "gabriel@antz.studio" }]

dependencies = [
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "langchain>=0.2",
    "langchain-core>=0.2",
    "litellm>=1.40",
    "langchain-community>=0.2",
    "jinja2>=3.1",
    "httpx>=0.27",
    "anyio>=4.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-PyYAML>=6.0",
]

[project.scripts]
adv-constitution = "adversarial.attack_engine:cli_entry"

# --- ADICIONADO: Regras de Descoberta de Pacotes ---
[tool.setuptools.packages.find]
include = ["adversarial*", "constitution*", "defense*", "reporting*"]
exclude = ["reports*", "tests*"]

# --- ADICIONADO: Incluir arquivos estáticos (Jinja2) ---
[tool.setuptools.package-data]
"reporting" = ["templates/*.j2"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--tb=short -q"

[tool.ruff]
line-length = 90
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true