[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "antz-audit"
version = "0.3.2"
description = "Automated red-teaming framework for Agentic Constitutions"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Ant'z Studio", email = "gabriel@antz.studio" }]

dependencies = [
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "langchain>=0.2",
    "langchain-core>=0.2",
    "litellm>=1.40",
    "langchain-litellm>=0.1",
    "jinja2>=3.1",
    "httpx>=0.27",
    "anyio>=4.4",
    "tenacity>=8.2",
    "rich>=13.0",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
]

[project.optional-dependencies]
pdf = ["weasyprint>=61.0"]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-PyYAML>=6.0",
]
all = [
    "weasyprint>=61.0",
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-PyYAML>=6.0",
]

[project.scripts]
adv-constitution = "adversarial.attack_engine:cli_entry"
antz-audit             = "adversarial.attack_engine:cli_entry"

[tool.setuptools.packages.find]
include = ["adversarial*", "constitution*", "defense*", "reporting*"]
exclude = ["reports*", "tests*"]

[tool.setuptools.package-data]
"reporting" = ["templates/*.j2"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths    = ["tests"]
addopts      = "--tb=short -q"

[tool.ruff]
line-length    = 90
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version         = "3.11"
strict                 = true
ignore_missing_imports = true